adding angular frotnend to project
