# tasc_exercise/app.js
@@ -4,6 +4,7 @@ const SwaggerExpress = require('swagger-express-mw');
 const swaggerUi = require('swagger-tools/middleware/swagger-ui');
 const app = require('express')();
 const express = require('express');
+const FRONTEND_DIR = __dirname + '/public/checkout-app/dist/checkout-app';
 module.exports = app; // for testing
 
 var config = {
@@ -18,7 +19,7 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
     app.use(swaggerUi(swaggerExpress.runner.swagger));
 
     //exposes the public dir
-    app.use(express.static(__dirname + '/public'));
+    app.use(express.static(FRONTEND_DIR));
 
     // install middleware
     swaggerExpress.register(app);
@@ -27,7 +28,7 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
     app.listen(port);
 
     console.log('\nSwagger-ui http://127.0.0.1:' + port + '/docs');
-    console.log('Frontend Checkout wiki http://127.0.0.1:' + port + '/');
+    console.log('Frontend Checkout webapp  http://127.0.0.1:' + port + '/');
 
     if (swaggerExpress.runner.swagger.paths['/hello']) {
         console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
